examples/negative/type_errors/L1/10_mult_bool_int.ob
MODULE MultBoolInt;

VAR b: BOOLEAN;
    i: INTEGER;
    ok: BOOLEAN; (* Ensures errors occur on the correct line *)

BEGIN
  b := TRUE;
  i := 2;
  b := b * i; ok := TRUE;
END MultBoolInt.
